--- a/leetCode.html
+++ b/leetCode.html
@@ -211,35 +211,42 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-var addTwoNumbers = function(l1, l2) {
-    const result = [];
-    let acc = 0;
-    while(true) {
-        if(!l1 && !l2) {
-            if(acc) {
-                result.push(acc);
-            }
-            break;
-        }
-        let r = acc;
-        if(l1) {
-            r += l1.val;
-            l1 = l1.next;
-        }
-
-        if(l2) {
-            r += l2.val;
-            l2 = l2.next;
-        }
-
-        result.push(r%10);
-        acc = r>=10 ? 1 : 0;
+/**
+ * @param {number[]} A
+ * @param {number[]} B
+ * @return {number[]}
+ */
+var fairCandySwap = function(A, B) {
+    let aSum = A.reduce((a, b)=>a+b, 0);
+    let bSum = B.reduce((a, b)=>a+b, 0);
+    let avg = (aSum+bSum)/2;
+    let swap = false;
+    //try to keey A is less than B
+    if(aSum>bSum) {
+        [aSum, bSum] = [bSum, aSum];
+        [A, B] = [B, A];
+        swap = true;
     }
 
-    return makeLink(result);
+    let bCache = {};
+    for(let b of B) {
+        bCache[b] = 1;
+    }
+    let aDiff = avg - aSum;
+    let result = [];
+    for(let a of A) {
+        if(bCache[a+aDiff]) {
+            result = [a, a+aDiff];
+        }
+    }
+
+    return swap ? result.reverse() : result;
 };
 
-console.log(addTwoNumbers(makeLink([2, 4, 3]), makeLink([5, 6, 4])));
+// console.log(fairCandySwap([1,1], [2,2]));//[1,2]
+ console.log(fairCandySwap([1,2], [2,3]));//[1,2]
+// console.log(fairCandySwap([2], [1, 3]));//[2,3]
+// console.log(fairCandySwap([1,2, 5], [2,4]));//[5,4]
 
 </script>
 </body>
