--- a/leetCode.html
+++ b/leetCode.html
@@ -212,41 +212,37 @@ const getGroup = function(arr, count) {
 };
 
 /**
- * @param {number[]} A
- * @param {number[]} B
- * @return {number[]}
+ * @param {string} s
+ * @return {number}
  */
-var fairCandySwap = function(A, B) {
-    let aSum = A.reduce((a, b)=>a+b, 0);
-    let bSum = B.reduce((a, b)=>a+b, 0);
-    let avg = (aSum+bSum)/2;
-    let swap = false;
-    //try to keey A is less than B
-    if(aSum>bSum) {
-        [aSum, bSum] = [bSum, aSum];
-        [A, B] = [B, A];
-        swap = true;
+var lengthOfLongestSubstring = function(s) {
+    if(s.length<2) {
+        return s.length;
     }
-
-    let bCache = {};
-    for(let b of B) {
-        bCache[b] = 1;
-    }
-    let aDiff = avg - aSum;
-    let result = [];
-    for(let a of A) {
-        if(bCache[a+aDiff]) {
-            result = [a, a+aDiff];
+    let start = 0;
+    let end = 1;
+    let max = 0;
+    for(let i = end, len = s.length; i<len; i++) {
+        let ch = s[end];
+        for(let j = start; j<i; j++) {
+            if(s[j]==s[i]) {
+                start = j+1;
+                break;
+            }
         }
-    }
 
-    return swap ? result.reverse() : result;
+        end = i;
+        max = Math.max(max, end-start+1);
+    }
+    
+    return max;
 };
 
-// console.log(fairCandySwap([1,1], [2,2]));//[1,2]
- console.log(fairCandySwap([1,2], [2,3]));//[1,2]
-// console.log(fairCandySwap([2], [1, 3]));//[2,3]
-// console.log(fairCandySwap([1,2, 5], [2,4]));//[5,4]
-
+console.log(lengthOfLongestSubstring("abcabcbb"));//3
+console.log(lengthOfLongestSubstring("bbbbb"));//1
+console.log(lengthOfLongestSubstring("pwwkew"));//3
+console.log(lengthOfLongestSubstring("aa"));//1
+console.log(lengthOfLongestSubstring("a"));//1
+console.log(lengthOfLongestSubstring(""));//0
 </script>
 </body>
