--- a/leetCode.html
+++ b/leetCode.html
@@ -212,37 +212,13 @@ const getGroup = function(arr, count) {
 };
 
 /**
- * @param {string} s
- * @return {number}
+ * @param {number[]} A
+ * @return {number[]}
  */
-var lengthOfLongestSubstring = function(s) {
-    if(s.length<2) {
-        return s.length;
-    }
-    let start = 0;
-    let end = 1;
-    let max = 0;
-    for(let i = end, len = s.length; i<len; i++) {
-        let ch = s[end];
-        for(let j = start; j<i; j++) {
-            if(s[j]==s[i]) {
-                start = j+1;
-                break;
-            }
-        }
-
-        end = i;
-        max = Math.max(max, end-start+1);
-    }
-    
-    return max;
+ var sortArrayByParity = function(A) {
+    return A.sort((a, b)=>{return a%2==0?-1:1;});
 };
 
-console.log(lengthOfLongestSubstring("abcabcbb"));//3
-console.log(lengthOfLongestSubstring("bbbbb"));//1
-console.log(lengthOfLongestSubstring("pwwkew"));//3
-console.log(lengthOfLongestSubstring("aa"));//1
-console.log(lengthOfLongestSubstring("a"));//1
-console.log(lengthOfLongestSubstring(""));//0
+console.log(sortArrayByParity([3,1,2,4]));//[2,4,3,1]
 </script>
 </body>
