--- a/leetCode.html
+++ b/leetCode.html
@@ -235,21 +235,24 @@ const INT_MIN = -Math.pow(2, 31);
 //     return value;
 // };
 
-var myAtoi = function(str) { 
-  const match = str.match(/^ *([+-]{0,1}[0-9]+)/);
-  return match ? Math.min(2147483647, Math.max(-2147483648, match[1])) : 0;
+/**
+ * @param {number[]} A
+ * @return {number[]}
+ */
+var sortArrayByParityII = function(A) {
+    const B = [];
+    for(let i = 0, len = A.length, odd = 1, even = 0; i<len; i++) {
+        if(A[i]%2==0) {
+            B[even] = A[i];
+            even += 2;
+        }else {
+            B[odd] = A[i];
+            odd += 2;
+        }
+    }
+
+    return B;
 };
-console.log(myAtoi("42"));//42
-console.log(myAtoi("   -42"));//-42
-console.log(myAtoi("4193 with words"));//4193
-console.log(myAtoi("words and 987"));//0
-console.log(myAtoi(""));//0
-console.log(myAtoi(" 9 8d"));//0
-console.log(myAtoi("-91283472332"));//-2147483648
-console.log(myAtoi("91283472332"));//2147483647
-console.log(myAtoi("3.14159"));//3
-console.log(myAtoi("3."));//3
-console.log(myAtoi("+1"));//1
-console.log(myAtoi("  -0012a42"));//-12
+console.log(sortArrayByParityII([4,2,5,7]));
 </script>
 </body>
