--- a/leetCode.html
+++ b/leetCode.html
@@ -215,27 +215,26 @@ const INT_MAX = Math.pow(2, 31)-1;
 const INT_MIN = -Math.pow(2, 31);
 
 /**
- * @param {number} num
- * @return {string}
+ * @param {string[]} emails
+ * @return {number}
  */
-var intToRoman = function(num) {
-    let dts = [["M", 1000], ["CM", 900], ["D", 500], ["CD", 400], ["C", 100], ["XC", 90], ["L", 50], ["XL", 40], ["X", 10], ["IX", 9], ["V", 5], ["IV", 4], ["I", 1]];
-    let result = "";
-    let cur = 0;
-    while(num>0) {
-        if(num<dts[cur][1]) {
-            cur++;
-            continue;
+var numUniqueEmails = function(emails) {
+    emails = emails.map(email=>{
+        let [name, domain] = email.split("@");
+        name = name.replace(/\./g, "").replace(/\+.*/, "");
+        return `${name}@${domain}`;
+    });
+
+    const cache = {};
+    return emails.reduce((count, email)=>{
+        if(cache[email]) {
+            return count;
+        }else {
+            cache[email] = 1;
+            return ++count;
         }
-        num -= dts[cur][1];
-        result += dts[cur][0];
-    }
-    return result;
+    }, 0);
 };
-console.log(intToRoman(3));//III
-console.log(intToRoman(4));//IV
-console.log(intToRoman(9));//IX
-console.log(intToRoman(58));//LVIII
-console.log(intToRoman(1994));//MCMXCIV
+console.log(numUniqueEmails(["test.email+alex@leetcode.com","test.e.mail+bob.cathy@leetcode.com","testemail+david@lee.tcode.com"]));//2
 </script>
 </body>
