--- a/leetCode.html
+++ b/leetCode.html
@@ -211,40 +211,76 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
+const compare = (a, b)=>{
+    const digitLog = /^\S+\s\d/;
+    let isADigit = digitLog.test(a);
+    let isBDigit = digitLog.test(b);
+    if(isADigit&&isBDigit) {
+        return 0;
+    }else if(isADigit) {
+        return 1;
+    }else if(isBDigit) {
+        return -1;
+    }else {
+        let aPart = a.replace(/^\S+\s/, "");
+        let bPart = b.replace(/^\S+\s/, "");
+        if(aPart==bPart) {
+            return a > b ? 1 : -1;
+        }else {
+            return aPart>bPart ? 1 : -1;
+        }
+    }
+};
+
 /**
- * @param {number[]} nums
- * @param {number} target
- * @return {number}
+ * @param {string[]} logs
+ * @return {string[]}
  */
-var threeSumClosest = function(nums, target) {
-    let closestDiff = Infinity;
+var reorderLogFiles = function(logs) {
+    // const digitLog = /^\S+\s\d/;
+    // logs.sort((a, b)=>{
+    //     let isADigit = digitLog.test(a);
+    //     let isBDigit = digitLog.test(b);
+    //     if(isADigit&&isBDigit) {
+    //         return 0;
+    //     }else if(isADigit) {
+    //         return 1;
+    //     }else if(isBDigit) {
+    //         return -1;
+    //     }else {
+    //         let aPart = a.replace(/^\S+\s/, "");
+    //         let bPart = b.replace(/^\S+\s/, "");
+    //         if(aPart==bPart) {
+    //             return a > b ? 1 : -1;
+    //         }else if(aPart>bPart) {
+    //             return 1;
+    //         }else {
+    //             return -1;
+    //         }
+    //     }
+    // });
+
     let result = [];
-    nums.sort((a,b)=>a-b);
-    for(let i = 0; i<nums.length; i++) {
-        let start = i+1;
-        let end = nums.length-1;
-        while(start<end) {
-            let _sum = nums[i] + nums[start] + nums[end];
-            let diff = _sum-target;
-            if(Math.abs(diff)<closestDiff) {
-                closestDiff = Math.abs(diff);
-                result = _sum;
-            }
-            if(diff==0) {
-                break;
-            }else if(diff>0){
-                end--;
-            }else if(diff<0){
-                start++;
-            }else {
-                start++;
-                end--;
+    while(logs.length) {//选择排序
+        let minIndex = 0;
+        for(let j = 0; j<logs.length; j++) {
+            if(compare(logs[minIndex], logs[j])>0) {
+                minIndex = j;
             }
         }
+        result.push(logs[minIndex]);
+        logs.splice(minIndex, 1);
     }
 
     return result;
 };
-console.log(threeSumClosest([-1, 2, 1, -4], 1));//2
+
+console.log(reorderLogFiles(["6p tzwmh ige mc", "ns 566543603829", "ubd cujg j d yf", "ha6 1 938 376 5", "3yx 97 666 56 5", "d 84 34353 2249", "0 tllgmf qp znc", "s 1088746413789", "ys0 splqqxoflgx", "uhb rfrwt qzx r", "u lrvmdt ykmox", "ah4 4209164350", "rap 7729 8 125", "4 nivgc qo z i", "apx 814023338 8"]));
+//["ubd cujg j d yf","u lrvmdt ykmox","4 nivgc qo z i","uhb rfrwt qzx r","ys0 splqqxoflgx","0 tllgmf qp znc","6p tzwmh ige mc","ns 566543603829","ha6 1 938 376 5","3yx 97 666 56 5","d 84 34353 2249","ah4 4209164350","rap 7729 8 125","apx 814023338 8","s 1088746413789"]
+//["ubd cujg j d yf","u lrvmdt ykmox","4 nivgc qo z i","uhb rfrwt qzx r","ys0 splqqxoflgx","0 tllgmf qp znc","6p tzwmh ige mc","ns 566543603829","ha6 1 938 376 5","3yx 97 666 56 5","d 84 34353 2249","s 1088746413789","ah4 4209164350","rap 7729 8 125","apx 814023338 8"]
+
+//console.log(reorderLogFiles(["a1 9 2 3 1","g1 act car","zo4 4 7","ab1 off key dog","a8 act zoo"]).join("|")==["g1 act car","a8 act zoo","ab1 off key dog","a1 9 2 3 1","zo4 4 7"].join("|"));
+//console.log(reorderLogFiles(["a1 9 2 3 1","g1 act car","zo4 4 7","ab1 off key dog","a8 act zoo","a2 act car"]).join("|"));
+//==["a2 act car","g1 act car","a8 act zoo","ab1 off key dog","a1 9 2 3 1","zo4 4 7"].join("|")
 </script>
 </body>
