--- a/leetCode.html
+++ b/leetCode.html
@@ -211,76 +211,40 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-const compare = (a, b)=>{
-    const digitLog = /^\S+\s\d/;
-    let isADigit = digitLog.test(a);
-    let isBDigit = digitLog.test(b);
-    if(isADigit&&isBDigit) {
-        return 0;
-    }else if(isADigit) {
-        return 1;
-    }else if(isBDigit) {
-        return -1;
-    }else {
-        let aPart = a.replace(/^\S+\s/, "");
-        let bPart = b.replace(/^\S+\s/, "");
-        if(aPart==bPart) {
-            return a > b ? 1 : -1;
-        }else {
-            return aPart>bPart ? 1 : -1;
-        }
-    }
-};
-
 /**
- * @param {string[]} logs
+ * @param {string} digits
  * @return {string[]}
  */
-var reorderLogFiles = function(logs) {
-    // const digitLog = /^\S+\s\d/;
-    // logs.sort((a, b)=>{
-    //     let isADigit = digitLog.test(a);
-    //     let isBDigit = digitLog.test(b);
-    //     if(isADigit&&isBDigit) {
-    //         return 0;
-    //     }else if(isADigit) {
-    //         return 1;
-    //     }else if(isBDigit) {
-    //         return -1;
-    //     }else {
-    //         let aPart = a.replace(/^\S+\s/, "");
-    //         let bPart = b.replace(/^\S+\s/, "");
-    //         if(aPart==bPart) {
-    //             return a > b ? 1 : -1;
-    //         }else if(aPart>bPart) {
-    //             return 1;
-    //         }else {
-    //             return -1;
-    //         }
-    //     }
-    // });
-
-    let result = [];
-    while(logs.length) {//选择排序
-        let minIndex = 0;
-        for(let j = 0; j<logs.length; j++) {
-            if(compare(logs[minIndex], logs[j])>0) {
-                minIndex = j;
+var letterCombinations = function(digits) {
+    const map = {
+        "1" : [],
+        "2" : ["a", "b", "c"],
+        "3" : ["d", "e", "f"],
+        "4" : ["g", "h", "i"],
+        "5" : ["j", "k", "l"],
+        "6" : ["m", "n", "o"],
+        "7" : ["p", "q", "r", "s"],
+        "8" : ["t", "u", "v"],
+        "9" : ["w", "x", "y", "z"],
+        "0" : [" "],
+    };
+    let result = [""];
+    digits = digits.split("");
+    while(digits.length) {
+        let letters = map[digits.shift()];
+        let tmp = [];
+        for(let letter of letters) {
+            for(let str of result) {
+                tmp.push(str+letter);
             }
         }
-        result.push(logs[minIndex]);
-        logs.splice(minIndex, 1);
+        result = tmp;
     }
 
     return result;
 };
-
-console.log(reorderLogFiles(["6p tzwmh ige mc", "ns 566543603829", "ubd cujg j d yf", "ha6 1 938 376 5", "3yx 97 666 56 5", "d 84 34353 2249", "0 tllgmf qp znc", "s 1088746413789", "ys0 splqqxoflgx", "uhb rfrwt qzx r", "u lrvmdt ykmox", "ah4 4209164350", "rap 7729 8 125", "4 nivgc qo z i", "apx 814023338 8"]));
-//["ubd cujg j d yf","u lrvmdt ykmox","4 nivgc qo z i","uhb rfrwt qzx r","ys0 splqqxoflgx","0 tllgmf qp znc","6p tzwmh ige mc","ns 566543603829","ha6 1 938 376 5","3yx 97 666 56 5","d 84 34353 2249","ah4 4209164350","rap 7729 8 125","apx 814023338 8","s 1088746413789"]
-//["ubd cujg j d yf","u lrvmdt ykmox","4 nivgc qo z i","uhb rfrwt qzx r","ys0 splqqxoflgx","0 tllgmf qp znc","6p tzwmh ige mc","ns 566543603829","ha6 1 938 376 5","3yx 97 666 56 5","d 84 34353 2249","s 1088746413789","ah4 4209164350","rap 7729 8 125","apx 814023338 8"]
-
-//console.log(reorderLogFiles(["a1 9 2 3 1","g1 act car","zo4 4 7","ab1 off key dog","a8 act zoo"]).join("|")==["g1 act car","a8 act zoo","ab1 off key dog","a1 9 2 3 1","zo4 4 7"].join("|"));
-//console.log(reorderLogFiles(["a1 9 2 3 1","g1 act car","zo4 4 7","ab1 off key dog","a8 act zoo","a2 act car"]).join("|"));
-//==["a2 act car","g1 act car","a8 act zoo","ab1 off key dog","a1 9 2 3 1","zo4 4 7"].join("|")
+console.log(letterCombinations("1"));
+console.log(letterCombinations(""));
+console.log(letterCombinations("23"));//["ad", "ae", "af", "bd", "be", "bf", "cd", "ce", "cf"]
 </script>
 </body>
