--- a/leetCode.html
+++ b/leetCode.html
@@ -212,28 +212,34 @@ const getGroup = function(arr, count) {
 };
 
 /**
- * @param {TreeNode} root
- * @param {number} L
- * @param {number} R
- * @return {number}
+ * @param {number[]} A
+ * @return {boolean}
  */
-var rangeSumBST = function(root, L, R) {
-    let sum = 0;
-    const travels = (node) => {
-        if(!node) {
-            return;
+ var validMountainArray = function(A) {
+    if(A.length<3) {
+        return false;
+    }
+    let splitIndex = 0;
+    for(var i = 1, len = A.length; i<len-1; i++) {
+        if(A[i]==A[i-1] || A[i]==A[i+1]) {//不能有平的
+            return false;
+        }else if(A[i]>A[i-1] && A[i]>A[i+1]) {
+            splitIndex = i;
         }
-        travels(node.left);
-        travels(node.right);
-        if(node.val>=L && node.val<=R) {
-            sum += node.val;
-        }
-    };
+    }
+    if(!splitIndex) {
+        return false;
+    }
 
-    travels(root);
-    return sum;
+    let aPart = A.slice(0, splitIndex);
+    let bPart = A.slice(splitIndex+1);
+    return aPart.join("_")==aPart.sort((a,b)=>a-b).join("_") && bPart.join("_")==bPart.sort((a,b)=>b-a).join("_");
 };
-console.log(rangeSumBST(makeTree([10,5,15,3,7,null,18]), 7, 15));//32
-console.log(rangeSumBST(makeTree([10,5,15,3,7,13,18,1,null,6]), 6, 10));//23
+console.log(validMountainArray([2,1]));//false
+console.log(validMountainArray([3,5,5]));//false
+console.log(validMountainArray([0,3,2,1]));//true
+console.log(validMountainArray([0,1,2,3,4,5,6,7,8,9]));//false
+console.log(validMountainArray([1,7,9,5,4,1,2]));//false
+console.log(validMountainArray([14,82,89,84,79,70,70,68,67,66,63,60,58,54,44,43,32,28,26,25,22,15,13,12,10,8,7,5,4,3]));//false
 </script>
 </body>
