--- a/leetCode.html
+++ b/leetCode.html
@@ -211,34 +211,14 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-/**
- * @param {string[]} words
- * @param {string} order
- * @return {boolean}
- */
-var isAlienSorted = function(words, order) {
-    let originalStr = words.join("|");
-    const map = {};
-    for(let i = 0; i<order.length; i++) {
-        map[order[i]] = i;
-    }
-    words.sort((a, b) => {
-        for(let i = 0, len = Math.min(a.length, b.length); i<len; i++) {
-            if(map[a[i]]<map[b[i]]) {
-                return -1;
-            }else if(map[a[i]]>map[b[i]]) {
-                return 1;
-            }
-        }
-
-        return a.length - b.length;
-    });
-
-    return words.join("|")==originalStr;
+var repeatedNTimes = function(A) {
+    A.sort((a,b)=>a-b);
+    let mid = Math.floor(A.length/2);
+    return A[0]==A[mid-1] ? A[0] : A[mid];
 };
-console.log(isAlienSorted(["hello","leetcode"], "hlabcdefgijkmnopqrstuvwxyz"));//true
-console.log(isAlienSorted(["word","world","row"], "worldabcefghijkmnpqstuvxyz"));//false
-console.log(isAlienSorted(["apple","app"], "abcdefghijklmnopqrstuvwxyz"));//false
-console.log(isAlienSorted(["apple","apple"], "abcdefghijklmnopqrstuvwxyz"));//true
+console.log(repeatedNTimes([1,2,3,3]));//3
+console.log(repeatedNTimes([2,1,2,5,3,2]));//2
+console.log(repeatedNTimes([5,1,5,2,5,3,5,4]));//5
+console.log(repeatedNTimes([9,5,3,3]));//3
 </script>
 </body>
