--- a/leetCode.html
+++ b/leetCode.html
@@ -211,29 +211,11 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-/**
- * @param {number[]} A
- * @return {number}
- */
-var largestPerimeter = function(A) {
-    A.sort((a,b)=>b-a);
-    for(let i = 0, iLen = A.length-2; i<iLen; i++) {
-        for(let j = i+1, jLen = A.length-1; j<jLen; j++) {
-            for(let k = j+1, kLen = A.length; k<kLen; k++) {
-                if(A[k]+A[j]>A[i]) {
-                    return A[k] + A[j] + A[i];
-                }
-            }
-        }
-    }
-
-    return 0;
+var sortedSquares = function(A) {
+    return A.map(v=>v*v).sort((a,b)=>a-b);
 };
 
-console.log(largestPerimeter([2,1,2]));//5
-console.log(largestPerimeter([1,2,1]));//0
-console.log(largestPerimeter([3,2,3,4]));//10
-console.log(largestPerimeter([3,6,2,3]));//8
-console.log(largestPerimeter([3,6,2,3,1,23,5,6,72,46,7,4,2,3,56,2,34,5,6,3,3,4,5,67,2,291727,34,3,4,5,24,2,4,56]));//
+console.log(sortedSquares([-4,-1,0,3,10]));//[0,1,9,16,100]
+console.log(sortedSquares([-7,-3,2,3,11]));//[4,9,9,49,121]
 </script>
 </body>
