--- a/leetCode.html
+++ b/leetCode.html
@@ -211,29 +211,70 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-var isCousins = function(root, x, y) {
-    const _findNode = (node, parentNode, val, depth)=>{
-        if(node.val==val) {
-            throw [parentNode, depth];
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var orangesRotting = function(grid) {
+    let goodCount = 0;
+    let rottenCells = [];
+    for(let i = 0; i<grid.length; i++) {
+        for(let j = 0; j < grid[i].length; j++) {
+            switch(grid[i][j]) {
+                case 1:
+                    goodCount++;
+                    break;
+                case 2:
+                    rottenCells.push([i, j]);
+                    break;
+                default:
+                    break;
+            }
         }
-        node.left && _findNode(node.left, node, val, depth+1);
-        node.right && _findNode(node.right, node, val, depth+1);
     }
-    const findNode = (val) => {
-        try {
-            _findNode(root, null, val, 0);
-        }catch(result){
-            return result;
+    if(!goodCount) {
+        return 0;
+    }
+    let minutes = 0;
+    while(true) {
+        let newRottenCells = [];
+        for(let i = 0; i<rottenCells.length; i++) {
+            let [x, y] = rottenCells[i];
+            let pos = [];
+            if(x>0) {
+                pos.push([x-1, y]);
+            }
+            if(y<grid[x].length-1) {
+                pos.push([x, y+1]);
+            }
+            if(x<grid.length-1) {
+                pos.push([x+1, y]);
+            }
+            if(y>0) {
+                pos.push([x, y-1]);
+            }
+            
+            for(let [xx, yy] of pos) {
+                if(grid[xx][yy]==1) {
+                    grid[xx][yy] = 2;
+                    newRottenCells.push([xx, yy]);
+                    goodCount--;
+                }
+            }
         }
-    };
 
-    const [xRoot, xDepth] = findNode(x);
-    const [yRoot, yDepth] = findNode(y);
-    return xDepth==yDepth && xRoot&&yRoot&&xRoot.val!=yRoot.val;
+        if(!newRottenCells.length) {
+            break;
+        }
+        rottenCells = newRottenCells;
+        minutes++;
+    }
+    
+    return minutes>0&&!goodCount ? minutes : -1;
 };
-console.log(isCousins(makeTree([1,2,3,4]), 4, 3));//false
-console.log(isCousins(makeTree([1,2,3,null,4,null,5]), 5, 4));//true
-console.log(isCousins(makeTree([1,2,3,null,4]), 2, 3));//false
+console.log(orangesRotting([[2,1,1],[1,1,0],[0,1,1]]));//4
+console.log(orangesRotting([[2,1,1],[0,1,1],[1,0,1]]));//-1
+console.log(orangesRotting([[0,2]]));//0
 
 </script>
 </body>
