--- a/leetCode.html
+++ b/leetCode.html
@@ -212,34 +212,49 @@ const getGroup = function(arr, count) {
 };
 
 /**
- * @param {number} N
- * @param {number[][]} trust
+ * @param {character[][]} board
  * @return {number}
-*/
-var findJudge = function(N, trust) {
-    const cache = {};//存储被谁信任
-    const cache2 = {};//存储信任谁
-    for(let [a, b] of trust) {
-        cache[b]=cache[b] || 0;
-        cache[b]++;
-        
-        cache2[a]=cache2[a] || 0;
-        cache2[a]++;
-    }
-    for(let index in cache) {
-        if(cache[index]==N-1 && !cache2[index]) {
-            return index;
+ */
+var numRookCaptures = function(board) {
+    let rook = null;
+    const bishops = [];
+    const pawns = [];
+    outer:for(let i = 0; i<board.length; i++) {
+        for(let j = 0; j<board[i].length; j++) {
+            if(board[i][j]=="R") {
+                rook = [i, j]
+                break outer;
+            }
         }
     }
 
-    return -1;
+    const canReach = function(ax, ay) {
+        let [x, y] = rook;
+        while(x>=0&&x<board.length&&y>0&&y<board[0].length) {
+            switch(board[x][y]) {
+                case "p":
+                    return 1;
+                case "B":
+                    return 0;
+                default:
+                    break;
+            }
+            x += ax;
+            y += ay;
+        }
+        return 0;
+    };
+
+    let sum = 0;
+    sum += canReach(0, 1);
+    sum += canReach(0, -1);
+    sum += canReach(1, 0);
+    sum += canReach(-1, 0);
+    return sum;
 };
-console.log(findJudge(2, [[1,2]]));//2
-console.log(findJudge(3, [[1,3],[2,3]]));//3
-console.log(findJudge(3, [[1,3],[2,3],[3,1]]));//-1
-console.log(findJudge(3, [[1,2],[2,3]]));//-1
-console.log(findJudge(4, [[1,3],[1,4],[2,3],[2,4],[4,3]]));//3
-console.log(findJudge(4, [[1,3],[1,4],[2,3],[2,4]]));//-1
+console.log(numRookCaptures([[".",".",".",".",".",".",".","."],[".",".",".","p",".",".",".","."],[".",".",".","R",".",".",".","p"],[".",".",".",".",".",".",".","."],[".",".",".",".",".",".",".","."],[".",".",".","p",".",".",".","."],[".",".",".",".",".",".",".","."],[".",".",".",".",".",".",".","."]]));//3
+console.log(numRookCaptures([[".",".",".",".",".",".",".","."],[".","p","p","p","p","p",".","."],[".","p","p","B","p","p",".","."],[".","p","B","R","B","p",".","."],[".","p","p","B","p","p",".","."],[".","p","p","p","p","p",".","."],[".",".",".",".",".",".",".","."],[".",".",".",".",".",".",".","."]]));//0
+console.log(numRookCaptures([[".",".",".",".",".",".",".","."],[".",".",".","p",".",".",".","."],[".",".",".","p",".",".",".","."],["p","p",".","R",".","p","B","."],[".",".",".",".",".",".",".","."],[".",".",".","B",".",".",".","."],[".",".",".","p",".",".",".","."],[".",".",".",".",".",".",".","."]]));//3
 
 </script>
 </body>
