--- a/leetCode.html
+++ b/leetCode.html
@@ -211,31 +211,35 @@ const getGroup = function(arr, count) {
     getGroup(arr.slice(mid), 1)
 };
 
-var commonChars = function(A) {
-    let cache = {};
-    let inited = false;
-    for(let str of A) {
-        let newCache = {};
-        for(let ch of str) {
-            if(inited) {
-                newCache[ch] = Math.min((newCache[ch]||0)+1, cache[ch]||0);
-            }else {
-                newCache[ch] = (newCache[ch]||0) + 1;
-            }
+/**
+ * @param {number[]} A
+ * @param {number} K
+ * @return {number}
+ */
+var largestSumAfterKNegations = function(A, K) {
+    A.sort((a,b)=>a-b);
+    let negs = [];
+    for(var i = 0, len = A.length; i<len; i++) {
+        if(A[i]<0 && negs.length<K) {
+            negs.push(-A[i]);
+        }else {
+            break;
         }
-        inited = true;
-        cache = newCache;
     }
 
-    const result = [];
-    for(let ch in cache) {
-        for(let i = 0; i<(cache[ch]||0); i++) {
-            result.push(ch);
+    A = A.slice(i).concat(negs);
+    let kLeft = K-negs.length;
+    if(kLeft>0) {//已经处理完所有负数，但是还有次数剩下，这时对绝对值最小的数进行处理（此时A已经全部是非负数）
+        A = A.sort((a,b)=>a-b);
+        if(kLeft%2!=0) {
+            A[0] = -A[0];
         }
     }
-    return result;
+
+    return A.reduce((a,b)=>a+b, 0);
 };
-console.log(commonChars(["bella","label","roller"]));//["e","l","l"]
-console.log(commonChars(["cool","lock","cook"]));//["c","o"]
+console.log(largestSumAfterKNegations([4,2,3], 1));//5
+console.log(largestSumAfterKNegations([3,-1,0,2], 3));//6
+console.log(largestSumAfterKNegations([2,-3,-1,5,-4], 2));//13
 </script>
 </body>
